# PixelShell

./: .gitignore  Cargo.toml  README.md  build.rs  setup.iss
apps/ps-cli/: Cargo.toml
apps/ps-cli/src/: main.rs
apps/ps-gui/: Cargo.toml
apps/ps-gui/src/: app.rs  main.rs  utils.rs
apps/ps-gui/src/tabs/: build.rs  convert.rs  debug.rs  download.rs  mod.rs  run.rs
apps/ps-gui/src/theme/: mod.rs  palette.rs  style.rs  widgets.rs
apps/ps-runner/: build.rs
apps/ps-runner/src/: audio.rs  desktop.rs  main.rs  payload.rs  renderer.rs
compile/: helpers.py  image-to-bin.py  video-to-bin.py
crates/ps-core/src/: lib.rs
crates/ps-factory/: Cargo.toml
crates/ps-factory/src/: temp_builder.rs  temp_converter.rs  temp_debugger.rs  temp_downloader.rs  temp_runner.rs
crates/ps-factory/src/builder/: async_handler.rs  cli.rs  core.rs  types.rs  utils.rs
crates/ps-factory/src/converter/: async_handler.rs  cli.rs  core.rs  mod.rs  types.rs  utils.rs
crates/ps-factory/src/debugger/: async_handler.rs  cli.rs  core.rs  mod.rs  types.rs  utils.rs
crates/ps-factory/src/downloader/: async_handler.rs  cli.rs  core.rs  types.rs  utils.rs
crates/ps-factory/src/runner/: async_handler.rs  cli.rs  core.rs  types.rs  utils.rs
src/: main.rs
